# perfermance-monitor

./: .gitignore  AGENTS.md  CMakeLists.txt  FRONTEND_README.md  README.md  grpc_discussion_summary.md  resume_project_simplified.md  simple_project_notes.md  tui.json  文件分成说明.md  简历v1.md  简历v2.md  简历书写.md  运行.md  面试准备.md
_markdown/: MySQL面试准备.md  stress_iperf_pressure_test.md  背诵.md  项目描述.md
build-clean/: Makefile  compile_commands.json
build-clean/.cmake/api/v1/reply/: cache-v2-981e888ef1cc98d26ac0.json  cmakeFiles-v1-de54a6a62829d6108cf5.json  codemodel-v2-78ef0f301f8ac8a263e8.json  directory-worker-Debug-1a248198277bde91099e.json  index-2026-03-11T09-27-23-0839.json  target-kernel_modules-Debug-80cd03f981e6e67eea25.json  target-monitor_proto-Debug-387ead0e4239f1c34ddd.json  target-worker-Debug-1d3c4b8896a66e546c3a.json
build-clean/proto/: Makefile
build-clean/worker/: Makefile
frontend-simple/: QUICKSTART.md  README.md  REALTIME_CHARTS.md  index.html  manage.sh  simple-api-server.py  start.sh
kernel/cpu_stat_module/: Makefile  cpu_stat_collector.c
manager/: CMakeLists.txt
manager/include/: host_manager.h  query_manager.h
manager/include/rpc/: grpc_server.h  query_service.h  rpc_client.h
manager/sql/: init_server_performance.sql
manager/src/: host_manager.cpp  main.cpp  query_manager.cpp
manager/src/rpc/: grpc_server.cpp  query_service.cpp  rpc_client.cpp
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  disk_info.proto  mem_info.proto  monitor_info.proto  net_info.proto  query_api.proto
shared/: cpu_stat_shared.h
worker/: CMakeLists.txt
worker/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  disk_monitor.h  host_info_monitor.h  mem_monitor.h  metric_collector.h  monitor_inter.h  monitor_structs.h  net_ebpf_monitor.h  net_monitor.h  user_monitor.h
worker/include/rpc/: grpc_manager_impl.h  monitor_pusher.h
worker/include/utils/: read_file.h  ring_buffer.h  utils.h
worker/scripts/: load_modules.sh
worker/src/: main.cpp
worker/src/ebpf/: Makefile  net_stats.bpf.c  net_stats.h  test_net_ebpf  test_net_ebpf.cpp  vmlinux.h
worker/src/kmod/: Makefile  cpu_stat_collector.c  softirq_collector.c  test_cpu_stat.c  test_softirq.c
worker/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  disk_monitor.cpp  host_info_monitor.cpp  mem_monitor.cpp  metric_collector.cpp  net_ebpf_monitor.cpp  net_monitor.cpp  test_user_monitor.cpp  user_monitor.cpp
worker/src/rpc/: grpc_manager_impl.cpp  monitor_pusher.cpp
worker/src/utils/: read_file.cpp
